--- a/Mappeoppgave_2_1006_ny.ipynb
+++ b/Mappeoppgave_2_1006_ny.ipynb
@@ -2610,7 +2610,9 @@
       "source": [
         "Kode adaptert fra: derekjclark. sok-1006_notater. GitHub. https://github.com/uit-sok-1006-v24/sok-1006_notater\n",
         "\n",
-        "2: Danziger, P. (2022, June 1). With Inflation Rising, The Lipstick Effect Kicks In And Lipstick Sales Rise. Forbes. https://www.forbes.com/sites/pamdanziger/2022/06/01/with-inflation-rising-the-lipstick-effect-kicks-in-and-lipstick-sales-rise/"
+        "2: Danziger, P. (2022, June 1). With Inflation Rising, The Lipstick Effect Kicks In And Lipstick Sales Rise. Forbes. https://www.forbes.com/sites/pamdanziger/2022/06/01/with-inflation-rising-the-lipstick-effect-kicks-in-and-lipstick-sales-rise/",
+        "\n",
+        "Menon Economics. (2020). Covid-19-situasjonens konsekvenser for industri, varehandel og reiseliv. Retrieved from https://www.menon.no/wp-content/uploads/2020-61-Covid19-situasjonens-konsekvenser-for-industri-varehandel-og-reiseliv-1.pdf"
       ],
       "metadata": {
         "id": "7VIqJ2XzyyM-"
